--- a/homework_5/stylebunbun.css
+++ b/homework_5/stylebunbun.css
@@ -490,5 +490,45 @@ body {
 	font-size: 18px;
 }
 
+/*shopping cart stuff*/
+.fullpage {
+	position: absolute;
+	top: 100px;
+	width: 100%;
+	background-color: rgba(120, 159, 223, 0.08);
+	height: 1250px;
+}
 
-/** STYLE TOTAL STUFF!!*/
+.progressbar {
+	left: 240px;
+	top: 60px;
+	position: absolute;
+}
+
+.items{
+	background-color: white;
+	position: absolute;
+	left: 85px;
+	top:190px;
+	border: 1px solid #717178;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	width: 780px;
+	height: 430px;
+}
+
+#mycart {
+	font-size: 22px;
+	padding-left: 60px;
+	padding-top: 20px;
+}
+
+#productimage img{
+	padding-left: 60px;
+	padding-top: 40px;
+	height: 220px;
+	width: 200px;
+}
+
+#continueshopping {
+	
+}
