updated shopping  cart

--- a/homework_5/stylebunbun.css
+++ b/homework_5/stylebunbun.css
@@ -509,10 +509,10 @@ body {
 	background-color: white;
 	position: absolute;
 	left: 85px;
-	top:190px;
+	top:140px;
 	border: 1px solid #717178;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	width: 780px;
+	width: 700px;
 	height: 430px;
 }
 
@@ -522,13 +522,172 @@ body {
 	padding-top: 20px;
 }
 
-#productimage img{
-	padding-left: 60px;
-	padding-top: 40px;
-	height: 220px;
-	width: 200px;
+#continueshopping {
+	position:absolute;
+	padding-left: 500px;;
+	top:48px;	
 }
 
-#continueshopping {
-	
+#line {
+	position:absolute;
+	top: 68px;
+	left: 50px;
+	}
+
+#line img{
+	width: 620px;
+}
+
+#itemcount p{
+	position:absolute;
+	padding-left: 0px;
+	padding-top: 0px;
+	font-size: 18px;
+	color: #5B5D63;
+}
+
+#itemcount {
+	position:absolute;
+	left: 175px;
+	top: 27px;
+	width:100px;
+}
+
+/*each added order*/
+.product {
+	position: relative;
+	top: 20px;
+	width: 100%;
+	height: 200px;
+}
+
+#productimage img{
+	padding-left: 60px;
+	padding-top: 0px;
+	height: 140px;
+	width: 120px;
+}
+
+#cancel {
+	position: absolute;
+	padding-left: 315px;
+	top: 0px;
+}
+
+
+#price {
+	position:absolute;
+	left: 200px;
+	top: -10px;
+}
+
+#bunname {
+	position:absolute;
+	left: 200px;
+	top: 20px;
+	color: #001B48;
+}
+
+#glazing{
+	position:absolute;
+	left: 190px;
+	top: 70px;
+	font-size: 12px;
+}
+
+#quantity{
+	position:absolute;
+	left: 190px;
+	top: 95px;
+	font-size: 12px;
+}
+/*end product item stuff*/
+#subtotal {
+	bottom: 10px;
+	position: absolute;
+	right: 160px;
+	font-size: 22px;
+}
+
+#subtotalcost {
+	bottom: 10px;
+	position:absolute;
+	right: 60px;
+	font-size: 22px;
+}
+
+.total {
+	background-color: white;
+	height:395px;
+	top:140px;
+	border: 1px solid #717178;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	left: 850px;
+	width: 380px;
+	position: absolute;
+}
+
+#total {
+	position: absolute;
+	left: 40px;
+	top: 20px;
+	font-size: 22px;
+}
+
+#totalcost {
+	position:absolute;
+	top:20px;
+	font-size: 22px;
+	right: 40px;
+}
+
+#shortline {
+	top: 68px;
+	position: absolute;
+	left: 35px;
+}
+
+#shortline img{
+	width: 315px;
+}
+
+#bottomline {
+	bottom: 90px;
+	position: absolute;
+	left: 35px;
+}
+
+#bottomline img{
+	width: 315px;
+}
+
+
+#labels {
+	position: absolute;
+	top: 100px;
+	left: 40px;
+	font-size: 18px;
+}
+
+#costs {
+	position:absolute;
+	top:100px;
+	right: 40px;
+	font-size: 18px;
+}
+
+.proceedbutton {
+	position:absolute;
+	height: 50px;
+	width: 300px;
+	left: 40px;
+	bottom: 20px;
+	background-color: #233654;
+	border-radius: 3px;
+}
+
+.proceedbutton p{
+	color: white;
+	padding-left: 40px;
+	margin-top: 15px;
 }
