updated item count

--- a/assgn6 - Copy/stylebunbun.css
+++ b/assgn6 - Copy/stylebunbun.css
@@ -508,7 +508,9 @@ body {
 	border-radius: 10px;
 	background-color: #38537D;
 	color: white;
-	padding-left: 5px;
+	text-align: center;
+	padding: 2px;
+	font-size: 12px;
 }
 
 #cartempty {
